# nuextract-platform-sdk

./: README.md  config.json  gen_sdk.sh  numind_api.yaml  pyproject.toml
.github/: .api_version
docs/: ActiveProfileResponse.md  Arr.md  Arr1.md  AuthenticationApi.md  BillingApi.md  BillingPeriod.md  BillingProfileResponse.md  Bool1.md  Content.md  ContentExtractionApi.md  ContentExtractionPlaygroundApi.md  ContentExtractionProjectManagementApi.md  ContentExtractionResponse.md  ContentProjectResponse.md  ContentProjectSettingsResponse.md  ConvertRequest.md  CreateContentProjectRequest.md  CreateMarkdownProjectRequest.md  CreateOrUpdateExampleRequest.md  CreateOrUpdateHistoryRequest.md  CreateOrUpdatePlaygroundItemRequest.md  CreateOrUpdateProjectRequest.md  CreateOrUpdateStructuredExampleRequest.md  CreateOrUpdateUserToken.md  CreateProjectRequest.md  CreateStructuredProjectRequest.md  DateRange.md  DefaultApi.md  DocumentInfo.md  DocumentResponse.md  DocumentsApi.md  Enum.md  ExampleResponse.md  ExamplesApi.md  ExamplesDeprecatedApi.md  ExtractionApi.md  ExtractionResponse.md  FeatureCardResponse.md  FileResponse.md  FilesApi.md  (+76 more)
sdk_generation/: gen_sdk.sh  pyproject_base.toml  remove_unused_models_from_openapi_spec_file.py
src/: .openapi-generator-ignore  pyproject_base.toml  remove_problematic_models_from_openapi_spec_file.py  remove_unused_models_from_openapi_spec_file.py
tests/: conftest.py  main.py  test_arr.py  test_authentication_api.py  test_create_or_update_example_request.py  test_create_or_update_history_request.py  test_create_or_update_project_request.py  test_create_or_update_user_token.py  test_default_api.py  test_document_info.py  test_document_response.py  test_enum.py  test_error.py  test_example_response.py  test_health_response.py  test_history_response.py  test_image_info.py  test_inference_response.py  test_invalid_schema.py  test_json_schema.py  test_json_schema_descriptions.py  test_multi_enum.py  test_numarkdown.py  test_obj.py  (+16 more)
(+432 files in other folders)
