# TODO switch to uv
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numind"
version = "0.0.0.dev0"
description = "SDK to interact with the NuMind models API."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    { name = "Nathan Fradet" },
]
keywords = [
    "artificial intelligence",
    "deep learning",
    "structured",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "urllib3",
    "python-dateutil",
    "pydantic",
    "typing-extensions",
]

[project.optional-dependencies]
tests = [
    "pytest-cov",
    "pytest-xdist[psutil]",
    "pytest-rerunfailures",
]

[project.urls]
Homepage = "https://github.com/numindai/numind"
Repository = "https://github.com/numindai/numind.git"
# Documentation = "https://numind.readthedocs.io"
Issues = "https://github.com/numindai/numind/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/numind"]

[tool.hatch.envs.test]
features = ["tests"]  # references to "tests" optional dependencies

[tool.hatch.envs.test.scripts]
test = "pytest"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
]

# TODO include mypy configuration from generated pyproject
